--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "repository": "https://github.com/Naveen-g09/Inventory-Backend.git",
   "author": "Naveen <naveengummella.rg@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "pg": "^8.11.3"
+  }
 }
